k8sscripts/deployment-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deployment
  labels:
    app: spring-boot-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-mysql
  template:
    metadata:
      labels:
        app: spring-boot-mysql
    spec:
      containers:
        - image: springboot-mysql-k8s:1
          name: springboot-mysql-k8s-container
          imagePullPolicy: Never 
          ports:
            - containerPort: 8080
