k8sscripts/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: human-ingress
spec:
  rules:
  - host: human.com
    http:
      paths:
      - backend:
          serviceName: spring-boot-svc
          servicePort: 8080
        path: /person
        pathType: Prefix
